--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ngrx/store": "^8.3.0",
+    "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
